feat: 添加ServerChan SDK并更新版本至v0.1.1
- 使用serverchan-sdk-golang替换手动HTTP调用，简化ServerChan通知发送逻辑
- 更新所有npm包版本至0.1.1，包括sdk-js、cli和server
- 在根package.json中添加发布脚本，便于发布所有包
- 更新网站显示的版本号和CNAME配置
- 改进GitHub Pages工作流配置

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "ask4me-monorepo",
   "private": true,
   "license": "MIT",
+  "scripts": {
+    "publish:sdk": "npm publish -w sdk-js --access public",
+    "publish:server": "npm publish -w packages/server --access public",
+    "publish:cli": "npm publish -w packages/cli --access public",
+    "publish:all": "npm run publish:sdk && npm run publish:server && npm run publish:cli"
+  },
   "workspaces": [
     "sdk-js",
     "packages/*"
