ci: 更新 GoReleaser 配置并添加 UI 构建步骤
更新 .goreleaser.yaml 中的 archives 配置以使用新的字段名。在发布工作流中添加构建 UI 的步骤，确保在发布二进制文件前生成前端资源。

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,9 +26,10 @@ builds:
 
 archives:
   - id: binaries
-    builds:
+    ids:
       - ask4me
-    format: binary
+    formats:
+      - binary
     name_template: ask4me-{{ .Os }}-{{ .Arch }}{{ if eq .Os "windows" }}.exe{{ end }}
 
 checksum:
