chore: 升级版本至 v0.1.4 并修复 Windows 可执行文件下载
修复 Windows 平台下载二进制文件时因 URL 后缀重复导致 404 错误的问题。同时更新所有相关 package.json 文件、网站版本显示及构建配置中的版本号。

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,7 +30,7 @@ archives:
       - ask4me
     formats:
       - binary
-    name_template: ask4me-{{ .Os }}-{{ .Arch }}{{ if eq .Os "windows" }}.exe{{ end }}
+    name_template: ask4me-{{ .Os }}-{{ .Arch }}
 
 checksum:
   name_template: checksums.txt
